# gol-cuda

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cuda_cell.cu  cuda_check.cu  cuda_entry.h  cuda_util.cu  cuda_util.cuh  fragment.glsl  imgui.ini  main.cpp  vertex.glsl
cmake/: FindImGui.cmake  Findglad.cmake  config.cmake
